--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "puppeteer": "^24.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rrule": "^2.8.1",
     "tsdav": "^2.1.5"
   },
   "devDependencies": {
